# digirhythm-v2

./: .gitignore  README.md  Snakefile  column_names.txt  env.yml  figsync.sh  pyproject.toml  report.html  ruff.toml  snakemake_slurm.sh
.github/workflows/: ci.yml  fig-sync.yml  figures-sync.yml
.snakemake/metadata/: ZGF0YS9wcm9jZXNzZWQvbW9tby9hbGxfZmVhdHVyZXMuY3N2  ZGF0YS9wcm9jZXNzZWQvbW9tby9hbGxfZmVhdHVyZXNfY2xlYW4uY3N2  ZGF0YS9wcm9jZXNzZWQvdGVzc2VyYWUvYWxsX2ZlYXR1cmVzLmNzdg==
config/: config.yaml  config.yml  hdbscan_parameters.tsv  latent.yaml
data/output/momo/: baseline_si_screen_sleep_window_7_minduration_28_maxduration_70
data/output/tesserae/: baseline_si_screen_sleep_window_7_minduration_28_maxduration_70
slurm-logs/: snakemake_slurm.err
src/latent/: make_latent.py
src/make_data/: clean.py  combine.py
tests/: test_signature.py  test_transition_signature.py
workflow/: Snakefile
workflow/envs/: latent_env.yaml  python_env.yaml  r_env.yaml
workflow/notebooks/: long_signature.html  personality_d_self.html  routine_signature_schematic.py  short_signature.html  short_signature_mixed.html
workflow/rules/: cluster.smk  common.smk  embeddings.smk  nmf.smk  preprocess.smk  signature.smk
workflow/scripts/: signature.py
workflow/scripts/clusters/: base.py  gmm.py  hdbscan.py  hierarchical.py  kmeans.py  run.py  visualize_cluster.py
workflow/scripts/embeddings/: cluster_embeddings.py  kmeans.py  make_embeddings.py  plot_embeddings.py
workflow/scripts/latent/: make_latent.py
workflow/scripts/make_data/: clean.py  combine.py  report.py
(+24 files in other folders)
